Created Changelog.

Added test.py file as a testing location before moving ideas to real scripts. 

