@@ -2,4 +2,6 @@ Created Changelog.
 
 Added test.py file as a testing location before moving ideas to real scripts. 
 
+FGseparation now successfully finds bounding box of moving objects using background subtractor mog2.
+
 
